# ScratchRunner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
include/glad/: glad.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c
lib/stb/: CMakeLists.txt
src/: Main.cpp
src/GL/Shader/: Shader.cpp
src/GL/ShaderLoaders/: VertexFragment.cpp  VertexFragment.hpp
src/GL/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp
src/Scratch/: Parse.cpp  Parse.hpp  ScratchBlock.hpp  ScratchCostume.hpp  ScratchProject.hpp  ScratchTarget.hpp
src/ScratchExecutor/Project/: Project.cpp  Project.hpp
src/ScratchExecutor/Project/Extension/: Extension.cpp  Extension.hpp
src/ScratchExecutor/Project/Meta/: Meta.cpp  Meta.hpp
src/ScratchExecutor/Project/Monitor/: Monitor.cpp  Monitor.hpp
src/ScratchExecutor/ProjectLoader/: ProjectLoader.cpp
src/ScratchRunner/: Runner.cpp  Runner.hpp
src/ScratchRunner/Scratch/: ScratchBlock.hpp
src/ScratchRunner/Scratch/ThreadedTarget/: ThreadedTarget.cpp  ThreadedTarget.hpp
src/ScratchRunner/Scratch/ThreadedTarget/Exec/: Exec.cpp  Exec.hpp
src/ScratchRunner/Scratch/ThreadedTarget/Exec/Handlers/: Handlers.cpp  Handlers.hpp
src/ScratchRunner/ThreadedTarget/: ThreadedTarget.cpp  ThreadedTarget.hpp
src/ScratchRunner/ThreadedTarget/Exec/: Exec.cpp  Exec.hpp
src/ScratchRunner/ThreadedTarget/Exec/Handlers/: Handlers.cpp  Handlers.hpp
src/ScratchRunner/ThreadedTarget/Worker/: Worker.cpp  Worker.hpp
src/ScratchRunner/Utility/: Conv.cpp  Conv.hpp  Vars.cpp  Vars.hpp
